[project]
name = "multiple"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docx2txt>=0.9",
    "fastapi>=0.137.1",
    "langchain>=1.3.9",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.7",
    "langchain-openai>=1.3.2",
    "pypdf>=6.13.2",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]
